--- a/view/chose.html
+++ b/view/chose.html
@@ -11,11 +11,11 @@
     <button class="btn btn-outline-primary pull-md-right" type="submit">Login</button>
   </nav>
   <h1 class="display-4">Renseignez vos centres d'interêts</h1>
-  <h3 class="lead">Ces informations permettent de vous proposer une actu personalisée</h3>
+  <h3 class="lead">Ces informations permettent de vous proposer un flux personalisé</h3>
 
   <div class="jumbotron">
     <div class="container">
-      <h2 class="display-6">Centres d'interêts: </h2>
+      <h2 class="display-6">Centres d'interêt: </h2>
     <div class="row">
       <?php
       if(isset($categories)){
