--- a/view/home.html
+++ b/view/home.html
@@ -1,3 +1,5 @@
+<?php if(!isset($cards))
+	$cards = [];?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,6 +18,16 @@
   <h3 class="display-8">Ces préférences peuvent êtrent modifées à tout moment</h3>
 
   <div class="jumbotron">
+	  <?php foreach($cards as $c){?>
+	  <div class="card">
+		  <img class="card-img-top" src="<?php echo $c['imagepath']?>" alt="Card image cap">
+		  <div class="card-block">
+			  <h4 class="card-title"><?php echo $c['titre']?></h4>
+			  <p class="card-text"><?php echo $c['description']?></p>
+			  <a href="#" class="btn btn-primary">Go somewhere</a>
+		  </div>
+	  </div>
+	  <?php }?>
   </div>
 </body>
 </html>
