--- a/view/chose.html
+++ b/view/chose.html
@@ -36,14 +36,13 @@
           echo '</h4>';
           echo '</div>
                 </div></a>
-                </div>
+              </div>';
         }
       }
 
-    </div>';
-    echo '<a href="http://www-etu-info.iut2.upmf-grenoble.fr/~nourik/m3104/tp1/BobMi-l-heure/controler/ctrl-chose.php?'.createURL($choix).'">
+    echo '</div><a href="http://www-etu-info.iut2.upmf-grenoble.fr/~nourik/m3104/tp1/BobMi-l-heure/controler/ctrl-chose.php?'.createURL($choix).'">
     <button type="submit" class="btn btn-success">Confirmer</button>
-  </a>';
+    </a>';
     ?>
     </div>
   </div>
