--- a/view/chose.html
+++ b/view/chose.html
@@ -40,7 +40,7 @@
         }
       }
 
-    echo '</div><a href="http://www-etu-info.iut2.upmf-grenoble.fr/~nourik/m3104/tp1/BobMi-l-heure/controler/chose.php?'.createURL($choix).'">
+    echo '</div><a href="../controler/chose.php?'.createURL($choix).'">
     <button type="submit" class="btn btn-success">Confirmer</button>
     </a>';
     ?>
