--- a/view/home.html
+++ b/view/home.html
@@ -15,7 +15,7 @@
     <button class="btn btn-outline-primary pull-md-right" type="submit">Ajouter flux</button>
   </nav>
   <h1 class="display-4">Voici votre contenu personnalisé</h1>
-  <h3 class="display-8">Ces préférences peuvent êtrent modifées à tout moment</h3>
+  <h3 class="display-8">Ces préférences peuvent être modifées à tout moment</h3>
 
   <div class="jumbotron">
 	  <?php foreach($cards as $c){?>
