--- a/view/home.css
+++ b/view/home.css
@@ -39,3 +39,14 @@ button{
 .card-img-top, .card-block{
 	display: inline-block;
 }
+.delete{
+    height: 20px;
+    width: 20px;
+    background:transparent url('http://www.clipartbest.com/cliparts/dcr/bGR/dcrbGRqc9.png');
+    background-size: cover;
+    display: inline-block;
+    border:0;
+    text-indent:1000em;
+}
+
+}
