--- a/view/home.html
+++ b/view/home.html
@@ -11,8 +11,9 @@
   <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">Journal</a>
   <ul class="nav navbar-nav">
-    <button class="btn btn-primary pull-md-right" type="submit">Mes Options</button>
-    <button class="btn btn-outline-primary pull-md-right" type="submit">Ajouter flux</button>
+    <button class="btn btn-outline-primary pull-sm-left" type="submit">Ajouter un flux</button>
+		<a href="../controler/logout.php"><button class="btn btn-primary pull-sm-right" type="submit">Deconnexion</button></a>
+    <button class="btn btn-outline-primary pull-sm-right" type="submit">Mes Options</button>
   </nav>
   <h1 class="display-4">Voici votre contenu personnalisé</h1>
   <h3 class="display-8">Ces préférences peuvent êtrent modifées à tout moment</h3>
