--- a/view/option.html
+++ b/view/option.html
@@ -9,8 +9,9 @@
   <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">Journal</a>
   <ul class="nav navbar-nav">
-    <button class="btn btn-primary pull-md-right" type="submit">Mes Actualités</button>
-    <button class="btn btn-outline-primary pull-md-right" type="submit">Ajouter flux</button>
+    <button class="btn btn-outline-primary pull-sm-left" type="submit">Ajouter</button>
+    <a href="../controler/logout.php"><button class="btn btn-primary pull-sm-right" type="submit">Deconnexion</button></a>
+    <button class="btn btn-outline-primary pull-sm-right" type="submit">Mes Actualités</button>
   </nav>
 
   <div class="jumbotron">
