--- a/view/back_office_board.html
+++ b/view/back_office_board.html
@@ -6,12 +6,8 @@
   <link rel="stylesheet" href="../view/back_office.css">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Journal</a>
-  <ul class="nav navbar-nav">
-    <a class="btn btn-outline-primary pull-md-right" href="../controler/ctrl-home.php">Home</a>
-    <button class="btn btn-outline-primary pull-md-right" type="submit">Login</button>
-  </nav>
+  <?php include("navbar.html"); ?>
+  
   <h1 class="display-4">Gestion des flux</h1>
   <h3 class="lead">Menu</h3>
 
