--- a/view/back_office_modif_fluxes.html
+++ b/view/back_office_modif_fluxes.html
@@ -5,11 +5,8 @@
   <link rel="stylesheet" href="../view/home.css">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Journal</a>
-  <ul class="nav navbar-nav">
-    <button class="btn btn-outline-primary pull-md-right" type="submit">Login</button>
-  </nav>
+  <?php include("navbar.html"); ?>
+  
   <h1 class="display-4">Gestion des flux</h1>
   <h3 class="lead">Modifier les flux d'une catégorie</h3>
 
