--- a/view/back_office_modifcat.html
+++ b/view/back_office_modifcat.html
@@ -5,11 +5,8 @@
   <link rel="stylesheet" href="bo.css">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Journal</a>
-  <ul class="nav navbar-nav">
-    <button class="btn btn-outline-primary pull-md-right" type="submit">Login</button>
-  </nav>
+  <?php include("navbar.html"); ?>
+
   <h1 class="display-4">Gestion des flux</h1>
   <h3 class="lead">Ajouter une catégorie</h3>
 
@@ -21,7 +18,7 @@
   <label>Lien vers l'image :</label><br>
      <input value="http://"><br><br>
   <input type="submit" value="Ajouter">
-</form> 
+</form>
   </div>
 </body>
 </html>
