--- a/view/chose.html
+++ b/view/chose.html
@@ -5,11 +5,8 @@
   <link rel="stylesheet" href="../view/chose.css">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="#">Journal</a>
-  <ul class="nav navbar-nav">
-    <button class="btn btn-outline-primary pull-md-right" type="submit">Login</button>
-  </nav>
+  <?php include("navbar.html"); ?>
+
   <h1 class="display-4">Renseignez vos centres d'interêts</h1>
   <h3 class="lead">Ces informations permettent de vous proposer un flux personalisé</h3>
 
@@ -23,7 +20,7 @@
           $nom = ($choix[$value->name]==1) ? $value->name."bis" : $value->name;
           $etat = ($choix[$value->name]==1) ? "=0" : "=1";
           echo '<div class="col-lg-4">';
-          echo '<a href="http://www-etu-info.iut2.upmf-grenoble.fr/~nourik/m3104/tp1/BobMi-l-heure/controler/ctrl-chose.php?'.$nom.$etat.createURL($choix).'"><div class="card"';
+          echo '<a href="../controler/ctrl-chose.php?'.$nom.$etat.createURL($choix).'"><div class="card"';
           if($choix[$value->name] == 1){
               echo ' style="box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)"';
           }
